--- a/Phylogeny.cabal
+++ b/Phylogeny.cabal
@@ -32,7 +32,7 @@ library
   exposed-modules:   Bio.PhylogenyData, Bio.Phylogeny 
  
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.5 && <5, parsec, containers, either-unwrap, fgl
+  build-depends:       base >=4.5 && <5, parsec, containers, either-unwrap, fgl, text, graphviz
 
   -- Directories containing source files.
   hs-source-dirs:      src
