--- a/Phylogeny.cabal
+++ b/Phylogeny.cabal
@@ -29,7 +29,7 @@ source-repository this
 
 library
   -- Modules exported by the library.
-  exposed-modules:   Bio.PhylogenyData, Bio.Phylogeny 
+  exposed-modules:   Bio.PhylogenyData, Bio.PhylogenyTools, Bio.PhylogenyParser
  
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.5 && <5, parsec, containers, either-unwrap, fgl, text, graphviz
